# FLINT-conversation-service

./: README.md  app.py  openapi.yaml  pyproject.toml  test.ipynb
system_prompts/: base_prompt.py  flint_prompt_1.py  flint_prompt_2.py  flint_prompt_3.py  generate_frames_prompt.py  prompts_combined.py  system_base_prompt.py  system_base_prompt_english.py
utils/: ChatGPTResponseHandler.py  PromptConstructor.py  split_response_by_delimiters.py
