[tool.poetry]
name = "flint-conversation-service"
version = "0.1.0"
description = ""
authors = ["Julius <jbhuizing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.1"
openai = "^1.9.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
